# tiak

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  docker-compose.yml  nginx.conf.example  test.js
.antigravitycli/: da8564ee-ae5d-4f05-aad1-69e88d78ad98.json
.github/: dependabot.yml
docs/plans/: 2026-06-15-comprehensive-ui-ux-refactor.md
nginx/: nginx.conf
server/: .env.example  .gitignore  Cargo.toml  README.md  backfill_tiktok_metadata.js  build.sh  install_deps.sh  package-lock.json  patch_api  patch_api.rs  patch_queue  patch_queue.rs  rebuild_db.js  rebuild_db_proper.js  test_api.js  test_created  test_created.rs  test_files.rs  test_header.rs  test_json.rs  test_regex.rs  test_sync  test_sync.rs
server/.cargo/: config.toml
server/scripts/: recover_metadata.js  transcribe.py
server/src/: auth.rs  cleanup.rs  cleanup_worker.rs  config.rs  db.rs  lib.rs  main.rs  metadata.rs  routes.rs  routes_tests.rs  storage.rs  timeline.rs  validation.rs
server/src/db_optimized/: jobs.rs  maintenance.rs  mod.rs  models.rs  setup.rs
server/src/queue/: download.rs  mod.rs  sync.rs
server/src/routes/: core_api.rs  files_api.rs  maintenance_api.rs  queue_api.rs  search_api.rs
server/src/routes/files_api/: catalog.rs  delivery.rs
web/: .gitignore  Dockerfile  README.md  babel.config.js  jest.config.js  jest.d.ts  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
web/src/__mocks__/next/: dynamic.tsx
web/src/components/: BatchOperations.tsx  CategoryBadge.tsx  CustomVideoPlayer.tsx  EnhancedFilters.tsx  FileCard.tsx  FileDateSection.tsx  FilePreviewModal.test.tsx  FilePreviewModal.tsx  HistoryTable.tsx  HistoryToolbar.tsx  Layout.tsx  LazyThumbnail.tsx  SearchableSelect.tsx  StatusBadge.tsx
web/src/components/__mocks__/: CustomVideoPlayer.tsx
web/src/components/settings/: CategorySettingsSection.test.tsx  CategorySettingsSection.tsx  CloudPathPicker.tsx  CloudSyncSection.tsx  MaintenanceToolsSection.tsx  PlayerPreferencesSection.tsx  SystemInfoSection.tsx
web/src/hooks/: useVisibilityPolling.ts
web/src/lib/: api.ts  config.ts  settings.ts  types.ts  utils.ts
web/src/pages/: _app.tsx  admin.tsx  files.tsx  history.tsx  index.tsx  settings.tsx
web/src/pages/api/: share_target.ts
web/src/styles/: globals.css
